--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
+      <!--
+        Use the Maven Build Timestamp as modification timestamp for all entries in the produced JAR file.
+        See https://maven.apache.org/guides/mini/guide-reproducible-builds.html
+      -->
+      <project.build.outputTimestamp>${maven.build.timestamp}</project.build.outputTimestamp>
+
       <java.version>1.8</java.version>
       <java.vendor>default</java.vendor>
 
