update build script

--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -35,6 +35,7 @@ jobs:
       uses: actions/cache@v2
       with:
         path: ~/.m2/repository
+              !~/.m2/repository/com/vegardit
         key: ${{ runner.os }}-mvnrepo-${{ hashFiles('**/pom.xml') }}
         restore-keys: |
           ${{ runner.os }}-mvnrepo-
@@ -62,6 +63,3 @@ jobs:
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
         bash .ci/build.sh
-
-    - name: Cleanup Maven repo cache
-      run: rm -rfv ~/.m2/repository/com/${{ github.repository }}
